DCS-1098 Updating secret name

--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -6,7 +6,7 @@ generic-service:
 
   ingress:
     host: welcome-api-dev.prison.service.justice.gov.uk
-
+    tlsSecretName: hmpps-welcome-to-prison-dev-cert
   env:
     APPLICATIONINSIGHTS_CONFIGURATION_FILE: applicationinsights.dev.json
 
