DCS-1165 Adding endpoint for returning moves
At the moment this just returns stubbed data

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,6 +1,19 @@
 server:
   shutdown: immediate
 
+oauth:
+  endpoint.url: http://localhost:8090/auth
+
 management.endpoint:
   health.cache.time-to-live: 0
   info.cache.time-to-live: 0
+
+spring:
+  main:
+    allow-bean-definition-overriding: true
+
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          public-key-location: classpath:local-public-key.pub
