--- a/helm_deploy/hmpps-welcome-people-into-prison-api/values.yaml
+++ b/helm_deploy/hmpps-welcome-people-into-prison-api/values.yaml
@@ -31,6 +31,8 @@ generic-service:
   namespace_secrets:
     hmpps-welcome-people-into-prison-api:
       APPINSIGHTS_INSTRUMENTATIONKEY: "APPINSIGHTS_INSTRUMENTATIONKEY"
+      SYSTEM_CLIENT_ID: "SYSTEM_CLIENT_ID"
+      SYSTEM_CLIENT_SECRET: "SYSTEM_CLIENT_SECRET"
       BASM_CLIENT_CLIENT_ID: "BASM_CLIENT_CLIENT_ID"
       BASM_CLIENT_CLIENT_SECRET: "BASM_CLIENT_CLIENT_SECRET"
 
