--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -7,6 +7,9 @@ basm:
 oauth:
   endpoint.url: http://localhost:8090/auth
 
+prison:
+  api.url: http://localhost:8092
+
 management.endpoint:
   health.cache.time-to-live: 0
   info.cache.time-to-live: 0
