--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,6 +42,12 @@ spring:
             client-secret: ${system.client.secret}
             authorization-grant-type: client_credentials
             scope: read
+          prisoner-search-api:
+            provider: hmpps-auth
+            client-id: ${system.client.id}
+            client-secret: ${system.client.secret}
+            authorization-grant-type: client_credentials
+            scope: read
         provider:
           hmpps-auth:
             token-uri: ${oauth.endpoint.url}/oauth/token
