--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -10,6 +10,9 @@ oauth:
 prison:
   api.url: http://localhost:8092
 
+prisoner:
+  search.api.endpoint.url: http://localhost:8093
+
 management.endpoint:
   health.cache.time-to-live: 0
   info.cache.time-to-live: 0
