--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -11,7 +11,7 @@ generic-service:
     OAUTH_ENDPOINT_URL: "https://sign-in.hmpps.service.justice.gov.uk/auth"
     PRISON_API_URL: "https://api.prison.service.justice.gov.uk"
     BASM_ENDPOINT_URL: "https://api.bookasecuremove.service.justice.gov.uk"
-    PRISONER d_SEARCH_API_ENDPOINT_URL: "https://prisoner-offender-search.prison.service.justice.gov.uk"
+    PRISONER_SEARCH_API_ENDPOINT_URL: "https://prisoner-offender-search.prison.service.justice.gov.uk"
 
 # CloudPlatform AlertManager receiver to route prometheus alerts to slack
 # See https://user-guide.cloud-platform.service.justice.gov.uk/documentation/monitoring-an-app/how-to-create-alarms.html#creating-your-own-custom-alerts
