--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - SERVER_PORT=8080
       - SPRING_PROFILES_ACTIVE=dev
       - OAUTH_ENDPOINT_URL=http://hmpps-auth:8080/auth
-      - PRISON_API_URL=http://prison-api:8080
+      - PRISON_ENDPOINT_URL=http://prison-api:8080
 
   prison-api:
     image: quay.io/hmpps/prison-api:latest
