✨DCS-1104: Add Nomis matching for BASM movements (#19)
* ✨DCS-1104: Add Nomis matching for BASM movements

* 🔧DCS-1104: Fix spelling mistake

* 🔧DCS-1104: Standardise env vars and rename variable

* 🔧DCS-1104: remove check for PRISON_TRANSFERS in mathcing logic, return null for booking UUID in prison-api moves, use mutable list for mathcing loop

* 🔧DCS-1104: Add condition for when we get a match by pnc and by prison number

* 🔧DCS-1104: Fix rebasing issues

* 🔧DCS-1104: Fix rebasing issues

* 🔧DCS-1104: Refactoring

* DCS-1104 Fix formatting. Flatten function nesting in MovementService, move constants to companion obejct in MovementServiceTest

Co-authored-by: bell-pa <peter.bell@digital.justice.gov.uk>

--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -9,7 +9,9 @@ generic-service:
   env:
     APPLICATIONINSIGHTS_CONFIGURATION_FILE: applicationinsights.json
     OAUTH_ENDPOINT_URL: "https://sign-in-preprod.hmpps.service.justice.gov.uk/auth"
+    PRISON_ENDPOINT_URL: "https://api-preprod.prison.service.justice.gov.uk"
     BASM_ENDPOINT_URL: "https://hmpps-book-secure-move-api-preprod.apps.live-1.cloud-platform.service.justice.gov.uk"
+    PRISONER_SEARCH_ENDPOINT_URL: "https://prisoner-offender-search-preprod.prison.service.justice.gov.uk"
 
 # CloudPlatform AlertManager receiver to route prometheus alerts to slack
 # See https://user-guide.cloud-platform.service.justice.gov.uk/documentation/monitoring-an-app/how-to-create-alarms.html#creating-your-own-custom-alerts
