--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -8,7 +8,10 @@ oauth:
   endpoint.url: http://localhost:8090/auth
 
 prison:
-  api.url: http://localhost:8092
+  endpoint.url: http://localhost:8092
+
+prisoner:
+  search.endpoint.url: http://localhost:8093
 
 management.endpoint:
   health.cache.time-to-live: 0
