--- a/helm_deploy/hmpps-welcome-people-into-prison-api/values.yaml
+++ b/helm_deploy/hmpps-welcome-people-into-prison-api/values.yaml
@@ -35,6 +35,11 @@ generic-service:
       SYSTEM_CLIENT_SECRET: "SYSTEM_CLIENT_SECRET"
       BASM_CLIENT_CLIENT_ID: "BASM_CLIENT_CLIENT_ID"
       BASM_CLIENT_CLIENT_SECRET: "BASM_CLIENT_CLIENT_SECRET"
+    rds-postgresql-instance-output:
+      SPRING_DATASOURCE_USERNAME: "database_username"
+      SPRING_DATASOURCE_PASSWORD: "database_password"
+      DATABASE_NAME: "database_name"
+      DATABASE_ENDPOINT: "rds_instance_endpoint"
 
   allowlist:
     office: "217.33.148.210/32"
