--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,37 @@ spring:
     serialization:
       WRITE_DATES_AS_TIMESTAMPS: false
 
+  jpa:
+    open-in-view: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        jdbc:
+          lob:
+            non_contextual_creation: true
+    show-sql: false
+    generate-ddl: false
+    hibernate:
+      ddl-auto: none
+
+  flyway:
+    locations: classpath:/db/migration/postgres,classpath:/db/migration/common
+    url: ${spring.datasource.url}
+    user: ${spring.datasource.username}
+    password: ${spring.datasource.password}
+    schemas: hmmps-welcome-people-into-prison
+
+  datasource:
+    url: 'jdbc:postgresql://${database.endpoint}/${database.name}?sslmode=prefer'
+    username: ${spring.datasource.username}
+    password: ${spring.datasource.password}
+    continue-on-error: true
+    hikari:
+      pool-name: WelcomePeopleIntoPrison-CP
+      connectionTimeout: 1000
+      validationTimeout: 500
+
+
   profiles:
     group:
       test:
