✨DCS-1212: Add basic logic for filtering booked movements

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -32,3 +32,9 @@ spring:
       resourceserver:
         jwt:
           public-key-location: classpath:local-public-key.pub
+
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
