--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -21,17 +21,20 @@ spring:
   main:
     allow-bean-definition-overriding: true
 
-  datasource:
-    endpoint: 'jdbc:h2:mem:pin-phone-monitor-db;MODE=PostgreSQL;SCHEMA=PIN_PHONE_MONITOR;IFEXISTS=TRUE'
-    username: testUser
-    name:  booking
-    password: dummy
-
   security:
     oauth2:
       resourceserver:
         jwt:
           public-key-location: classpath:local-public-key.pub
+
+  datasource:
+    # This reopens the H2 database prepared by flyway with default schema and user pin_phone_monitor
+    url: 'jdbc:h2:mem:welcome-people-in-prison-db;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=FALSE'
+    continue-on-error: true
+    username: testUser
+    password: dummy
+    hikari:
+      schema: WELCOME_PEOPLE_TO_PRISON
 
   jpa:
     show-sql: true
