--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -29,8 +29,7 @@ spring:
 
   datasource:
     # This reopens the H2 database prepared by flyway with default schema and user pin_phone_monitor
-    url: 'jdbc:h2:mem:welcome-people-in-prison-db;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=FALSE'
-    continue-on-error: true
+    url: 'jdbc:h2:mem:welcome-people-in-prison-db;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=FALSE;INIT=CREATE SCHEMA IF NOT EXISTS WELCOME_PEOPLE_TO_PRISON'
     username: testUser
     password: dummy
     hikari:
