✨dcs-1212 add filter to expected arrivals to remove prisoners already booked by the service (#37)
✨dcs-1212 add filter to expected arrivals to remove prisoners already booked by the service (#37)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,11 +13,41 @@ spring:
     serialization:
       WRITE_DATES_AS_TIMESTAMPS: false
 
+  jpa:
+    open-in-view: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        jdbc:
+          lob:
+            non_contextual_creation: true
+    show-sql: false
+    generate-ddl: false
+    hibernate:
+      ddl-auto: none
+
+  datasource:
+    url: 'jdbc:postgresql://${database.endpoint}/${database.name}?sslmode=prefer&currentSchema=${database.name}'
+    username: ${spring.datasource.username}
+    password: ${spring.datasource.password}
+    continue-on-error: true
+    hikari:
+      pool-name: WelcomePeopleIntoPrison-CP
+      connectionTimeout: 1000
+      validationTimeout: 500
+      schema: ${database.name}
+
+  flyway:
+    locations: classpath:/db/migration/postgres,classpath:/db/migration/common
+    url: ${spring.datasource.url}
+    user: ${spring.datasource.username}
+    password: ${spring.datasource.password}
+
   profiles:
     group:
       test:
         - "stdout"
-
+        - "h2flyway"
   security:
     oauth2:
       resourceserver:
