DCS-1255: Change prison lookup to use prison-register API instead of prison API

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -9,6 +9,7 @@ oauth:
 
 prison:
   endpoint.url: http://localhost:9005
+  register.endpoint.url: http://localhost:9006
 
 prisoner:
   search.endpoint.url: http://localhost:8093
