--- a/helm_deploy/hmpps-welcome-people-into-prison-api/values.yaml
+++ b/helm_deploy/hmpps-welcome-people-into-prison-api/values.yaml
@@ -14,6 +14,7 @@ generic-service:
     host: app-hostname.local    # override per environment
     tlsSecretName: hmpps-welcome-to-prison-cert
     path: /
+    external-dns.alpha.kubernetes.io/aws-weight: "100"
 
   # Environment variables to load into the deployment
   env:
