--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -14,6 +14,7 @@ generic-service:
     BASM_ENDPOINT_URL: "https://api.bookasecuremove.service.justice.gov.uk"
     PRISONER_SEARCH_ENDPOINT_URL: "https://prisoner-offender-search.prison.service.justice.gov.uk"
     PRISON_REGISTER_ENDPOINT_URL: "https://prison-register.hmpps.service.justice.gov.uk"
+    ENABLED_PRISONS: "NMI"
 
 # CloudPlatform AlertManager receiver to route prometheus alerts to slack
 # See https://user-guide.cloud-platform.service.justice.gov.uk/documentation/monitoring-an-app/how-to-create-alarms.html#creating-your-own-custom-alerts
