DCS-1081 prometheus alerts for prod to elp_alerts slack channel

--- a/helm_deploy/hmpps-welcome-people-into-prison-api/values.yaml
+++ b/helm_deploy/hmpps-welcome-people-into-prison-api/values.yaml
@@ -51,3 +51,4 @@ generic-service:
 
 generic-prometheus-alerts:
   targetApplication: hmpps-welcome-people-into-prison-api
+  alertSeverity: digital-prison-service-dev
