--- a/helm_deploy/hmpps-welcome-people-into-prison-api/values.yaml
+++ b/helm_deploy/hmpps-welcome-people-into-prison-api/values.yaml
@@ -13,7 +13,8 @@ generic-service:
     enabled: true
     host: app-hostname.local    # override per environment
     tlsSecretName: hmpps-welcome-to-prison-cert
-    contextColour: green
+    v1_2_enabled: true
+    v0_47_enabled: true
 
   # Environment variables to load into the deployment
   env:
