--- a/helm_deploy/hmpps-welcome-people-into-prison-api/values.yaml
+++ b/helm_deploy/hmpps-welcome-people-into-prison-api/values.yaml
@@ -14,7 +14,7 @@ generic-service:
     host: app-hostname.local    # override per environment
     tlsSecretName: hmpps-welcome-to-prison-cert
     v1_2_enabled: true
-    v0_47_enabled: true
+    v0_47_enabled: false
 
   # Environment variables to load into the deployment
   env:
