--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -5,7 +5,8 @@ generic-service:
   replicaCount: 2
 
   ingress:
-    host: welcome-api-dev.prison.service.justice.gov.uk
+    hosts:
+      - welcome-api-dev.prison.service.justice.gov.uk
 
   env:
     APPLICATIONINSIGHTS_CONFIGURATION_FILE: applicationinsights.dev.json
