--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -5,7 +5,8 @@ generic-service:
   replicaCount: 4
 
   ingress:
-    host: welcome-api.prison.service.justice.gov.uk
+    hosts:
+      - welcome-api.prison.service.justice.gov.uk
 
   env:
     APPLICATIONINSIGHTS_CONFIGURATION_FILE: applicationinsights.json
