MAP-144 Add Service account, bump deps

--- a/helm_deploy/hmpps-welcome-people-into-prison-api/values.yaml
+++ b/helm_deploy/hmpps-welcome-people-into-prison-api/values.yaml
@@ -1,7 +1,7 @@
 ---
 generic-service:
   nameOverride: hmpps-welcome-people-into-prison-api
-
+  serviceAccountName: hmpps-welcome-to-prison
   replicaCount: 4
 
   image:
