--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -11,7 +11,7 @@ generic-service:
   env:
     APPLICATIONINSIGHTS_CONFIGURATION_FILE: applicationinsights.dev.json
     OAUTH_ENDPOINT_URL: "https://sign-in-dev.hmpps.service.justice.gov.uk/auth"
-    PRISON_ENDPOINT_URL: "https://api-dev.prison.service.justice.gov.uk"
+    PRISON_ENDPOINT_URL: "https://prison-api-dev.prison.service.justice.gov.uk"
     BASM_ENDPOINT_URL: "https://hmpps-book-secure-move-api-staging.apps.live-1.cloud-platform.service.justice.gov.uk"
     PRISONER_SEARCH_ENDPOINT_URL: "https://prisoner-offender-search-dev.prison.service.justice.gov.uk"
     PRISON_REGISTER_ENDPOINT_URL: "https://prison-register-dev.hmpps.service.justice.gov.uk"
