--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -11,7 +11,7 @@ generic-service:
   env:
     APPLICATIONINSIGHTS_CONFIGURATION_FILE: applicationinsights.json
     OAUTH_ENDPOINT_URL: "https://sign-in.hmpps.service.justice.gov.uk/auth"
-    PRISON_ENDPOINT_URL: "https://api.prison.service.justice.gov.uk"
+    PRISON_ENDPOINT_URL: "https://prison-api.prison.service.justice.gov.uk"
     BASM_ENDPOINT_URL: "https://api.bookasecuremove.service.justice.gov.uk"
     PRISONER_SEARCH_ENDPOINT_URL: "https://prisoner-search.prison.service.justice.gov.uk"
     PRISON_REGISTER_ENDPOINT_URL: "https://prison-register.hmpps.service.justice.gov.uk"
