--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
             - gradle-{{ checksum "build.gradle.kts" }}
             - gradle-
       - run:
-          command: ./gradlew -Dorg.gradle.jvmargs="--illegal-access=permit" -Dkotlin.daemon.jvm.options="--illegal-access=permit" check
+          command: ./gradlew -Dorg.gradle.jvmargs="--illegal-access=permit" -Dkotlin.daemon.jvm.options="--illegal-access=permit" check koverHtmlReport
       - save_cache:
           paths:
             - ~/.gradle
@@ -32,6 +32,10 @@ jobs:
           path: build/test-results
       - store_artifacts:
           path: build/reports/tests
+          destination: test-report
+      - store_artifacts:
+          path: build/reports/kover/html
+          destination: test-coverage-report
 
 workflows:
   version: 2
