--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 .idea/
 .gradle/
 .run/
+.kotlin/
 build/
 
 # CMake
@@ -65,8 +66,9 @@ dist
 
 # AWS DOcker build
 ecr.repo
-/dps-gradle-spring-boot-suppressions.xml
+dps-gradle-spring-boot-suppressions.xml
 .editorconfig
+sonar-project.properties
 
 #Helm
 **/Chart.lock
