--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -15,3 +15,8 @@ generic-service:
     BASM_ENDPOINT_URL: "https://hmpps-book-secure-move-api-staging.apps.cloud-platform.service.justice.gov.uk"
     PRISONER_SEARCH_ENDPOINT_URL: "https://prisoner-search-dev.prison.service.justice.gov.uk"
     PRISON_REGISTER_ENDPOINT_URL: "https://prison-register-dev.hmpps.service.justice.gov.uk"
+
+# CloudPlatform AlertManager receiver to route prometheus alerts to slack
+# See https://user-guide.cloud-platform.service.justice.gov.uk/documentation/monitoring-an-app/how-to-create-alarms.html#creating-your-own-custom-alerts
+generic-prometheus-alerts:
+  alertSeverity: NON_PROD_ALERTS_SEVERITY_LABEL
