MAP-1753 moving seurity check from circleCi to github workflow

--- a/helm_deploy/hmpps-welcome-people-into-prison-api/values.yaml
+++ b/helm_deploy/hmpps-welcome-people-into-prison-api/values.yaml
@@ -1,6 +1,7 @@
 generic-service:
   nameOverride: hmpps-welcome-people-into-prison-api
   serviceAccountName: hmpps-welcome-to-prison
+  productId: "DPS046"
   replicaCount: 4
 
   image:
