Add scheduled downtime to non-prod environments
Signed-off-by: Julien Nioche <julien.nioche@digital.justice.gov.uk>

--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -4,6 +4,9 @@
 generic-service:
   replicaCount: 2
 
+  scheduledDowntime:
+    enabled: true
+
   ingress:
     hosts:
       - welcome-api-dev.prison.service.justice.gov.uk
