--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -18,5 +18,6 @@ generic-service:
     BASM_ENDPOINT_URL: "https://hmpps-book-secure-move-api-staging.apps.cloud-platform.service.justice.gov.uk"
     PRISONER_SEARCH_ENDPOINT_URL: "https://prisoner-search-dev.prison.service.justice.gov.uk"
     PRISON_REGISTER_ENDPOINT_URL: "https://prison-register-dev.hmpps.service.justice.gov.uk"
+    MANAGE_USERS_ENDPOINT_URL: "https://manage-users-api-dev.hmpps.service.justice.gov.uk"
 generic-prometheus-alerts:
   businessHoursOnly: true
