--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -14,6 +14,9 @@ prison:
 prisoner:
   search.endpoint.url: http://localhost:8093
 
+manage:
+  users.endpoint.url: http://localhost:9007
+
 management.endpoint:
   health.cache.time-to-live: 0
   info.cache.time-to-live: 0
