--- a/helm_deploy/hmpps-welcome-people-into-prison-api/values.yaml
+++ b/helm_deploy/hmpps-welcome-people-into-prison-api/values.yaml
@@ -34,6 +34,8 @@ generic-service:
       APPINSIGHTS_INSTRUMENTATIONKEY: "APPINSIGHTS_INSTRUMENTATIONKEY"
       BASM_CLIENT_CLIENT_ID: "BASM_CLIENT_CLIENT_ID"
       BASM_CLIENT_CLIENT_SECRET: "BASM_CLIENT_CLIENT_SECRET"
+      WELCOME_PEOPLE_INTO_PRISON_API_CLIENT_ID: "WELCOME_PEOPLE_INTO_PRISON_API_CLIENT_ID"
+      WELCOME_PEOPLE_INTO_PRISON_API_CLIENT_SECRET: "WELCOME_PEOPLE_INTO_PRISON_API_CLIENT_SECRET"
     rds-postgresql-instance-output:
       SPRING_DATASOURCE_USERNAME: "database_username"
       SPRING_DATASOURCE_PASSWORD: "database_password"
