--- a/helm_deploy/hmpps-welcome-people-into-prison-api/values.yaml
+++ b/helm_deploy/hmpps-welcome-people-into-prison-api/values.yaml
@@ -5,7 +5,7 @@ generic-service:
   replicaCount: 4
 
   image:
-    repository: quay.io/hmpps/hmpps-welcome-people-into-prison-api
+    repository: ghcr.io/ministryofjustice/hmpps-welcome-people-into-prison-api
     tag: app_version # override at deployment time
     port: 8080
 
